--- a/package.json
+++ b/package.json
@@ -10,17 +10,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/serialize": "^1.0.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.1",
     "@react-native-community/hooks": "^2.8.1",
     "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/material-bottom-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
     "pod": "^0.9.0",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.11.2",
     "react-native-safe-area-context": "^4.1.2",
     "react-native-screens": "^3.13.1",
+    "react-native-touch-id": "^4.4.1",
     "react-native-vector-icons": "^9.1.0"
   },
   "devDependencies": {
